RESOLVED FIXED219904
REGRESSION (r270839): ASSERT NOT REACHED in WebCore::Layout::InlineContentBreaker::processOverflowingContent
https://bugs.webkit.org/show_bug.cgi?id=219904
Summary REGRESSION (r270839): ASSERT NOT REACHED in WebCore::Layout::InlineContentBre...
Ryan Haddad
Reported 2020-12-15 11:18:25 PST
Seeing the following assertion failure with fast/layoutformattingcontext/line-heigt-when-text-is-inside-inline-container.html and fast/layoutformattingcontext/run-expansion-extends-line-content-width.html on Catalina and Mojave bots SHOULD NEVER BE REACHED ./layout/inlineformatting/InlineContentBreaker.cpp(244) : auto WebCore::Layout::InlineContentBreaker::processOverflowingContent(const WebCore::Layout::InlineContentBreaker::ContinuousContent &, const WebCore::Layout::InlineContentBreaker::LineStatus &)::(anonymous class)::operator()() const 1 0x7424f11c9 WTFCrash 2 0x71f6b51ab WTFCrashWithInfo(int, char const*, char const*, int) 3 0x72319f86d WebCore::Layout::InlineContentBreaker::processOverflowingContent(WebCore::Layout::InlineContentBreaker::ContinuousContent const&, WebCore::Layout::InlineContentBreaker::LineStatus const&) const::$_17::operator()() const 4 0x72319eac3 WebCore::Layout::InlineContentBreaker::processOverflowingContent(WebCore::Layout::InlineContentBreaker::ContinuousContent const&, WebCore::Layout::InlineContentBreaker::LineStatus const&) const 5 0x72319e0d1 WebCore::Layout::InlineContentBreaker::processInlineContent(WebCore::Layout::InlineContentBreaker::ContinuousContent const&, WebCore::Layout::InlineContentBreaker::LineStatus const&)::$_16::operator()() const 6 0x72319de30 WebCore::Layout::InlineContentBreaker::processInlineContent(WebCore::Layout::InlineContentBreaker::ContinuousContent const&, WebCore::Layout::InlineContentBreaker::LineStatus const&) 7 0x7231bb353 WebCore::Layout::LineBuilder::handleInlineContent(WebCore::Layout::InlineContentBreaker&, WebCore::Layout::LineBuilder::InlineItemRange const&, WebCore::Layout::LineCandidate const&) 8 0x7231b9e97 WebCore::Layout::LineBuilder::placeInlineContent(WebCore::Layout::LineBuilder::InlineItemRange const&, unsigned long) 9 0x7231af5aa WebCore::Layout::LineBuilder::computedIntrinsicWidth(WebCore::Layout::LineBuilder::InlineItemRange const&, float) 10 0x7231af336 WebCore::Layout::InlineFormattingContext::computedIntrinsicWidthForConstraint(float) const 11 0x7231af12c auto WebCore::Layout::InlineFormattingContext::computedIntrinsicWidthConstraints()::$_0::operator()<int>(int) const 12 0x7231aecbc WebCore::Layout::InlineFormattingContext::computedIntrinsicWidthConstraints() 13 0x72314b12d WebCore::Layout::FormattingContext::Geometry::shrinkToFitWidth(WebCore::Layout::Box const&, WebCore::LayoutUnit) 14 0x72314dee3 WebCore::Layout::FormattingContext::Geometry::outOfFlowNonReplacedHorizontalGeometry(WebCore::Layout::ContainerBox const&, WebCore::Layout::HorizontalConstraints const&, WebCore::Layout::OverriddenHorizontalValues const&) 15 0x723152a0d WebCore::Layout::FormattingContext::Geometry::outOfFlowHorizontalGeometry(WebCore::Layout::Box const&, WebCore::Layout::HorizontalConstraints const&, WebCore::Layout::VerticalConstraints const&, WebCore::Layout::OverriddenHorizontalValues const&) 16 0x723145a84 WebCore::Layout::FormattingContext::computeOutOfFlowHorizontalGeometry(WebCore::Layout::Box const&, WebCore::Layout::FormattingContext::ConstraintsForOutOfFlowContent const&)::$_1::operator()(WTF::Optional<WebCore::LayoutUnit>) const 17 0x72314578d WebCore::Layout::FormattingContext::computeOutOfFlowHorizontalGeometry(WebCore::Layout::Box const&, WebCore::Layout::FormattingContext::ConstraintsForOutOfFlowContent const&) 18 0x723146a53 WebCore::Layout::FormattingContext::layoutOutOfFlowContent(WebCore::Layout::InvalidationState&, WebCore::Layout::FormattingContext::ConstraintsForOutOfFlowContent const&) 19 0x72315466d WebCore::Layout::LayoutContext::layoutFormattingContextSubtree(WebCore::Layout::ContainerBox const&, WebCore::Layout::InvalidationState&) 20 0x7231542b7 WebCore::Layout::LayoutContext::layoutWithPreparedRootGeometry(WebCore::Layout::InvalidationState&) 21 0x72315415b WebCore::Layout::LayoutContext::layout(WebCore::LayoutSize const&, WebCore::Layout::InvalidationState&) 22 0x72354475d WebCore::FrameViewLayoutContext::layoutUsingFormattingContext() 23 0x723525c9d WebCore::FrameViewLayoutContext::layout() 24 0x7225f6676 WebCore::Document::implicitClose() 25 0x7232ebacb WebCore::FrameLoader::checkCallImplicitClose() 26 0x7232eb4fa WebCore::FrameLoader::checkCompleted() 27 0x7232e9547 WebCore::FrameLoader::finishedParsing() 28 0x72260ad56 WebCore::Document::finishedParsing() 29 0x722deee88 WebCore::HTMLConstructionSite::finishedParsing() 30 0x722e376e7 WebCore::HTMLTreeBuilder::finished() 31 0x722df62a8 WebCore::HTMLDocumentParser::end() LEAK: 1 WebPageProxy https://results.webkit.org/?suite=layout-tests&suite=layout-tests&test=fast%2Flayoutformattingcontext%2Fline-heigt-when-text-is-inside-inline-container.html&test=fast%2Flayoutformattingcontext%2Frun-expansion-extends-line-content-width.html
Attachments
crash log (93.46 KB, text/plain)
2020-12-15 11:18 PST, Ryan Haddad
no flags
Patch (2.00 KB, patch)
2020-12-15 20:26 PST, alan
no flags
Radar WebKit Bug Importer
Comment 1 2020-12-15 11:18:39 PST
Ryan Haddad
Comment 2 2020-12-15 11:18:46 PST
Created attachment 416266 [details] crash log
Ryan Haddad
Comment 3 2020-12-15 11:19:54 PST
alan
Comment 4 2020-12-15 12:50:05 PST
This is good! Will look into it later today.
alan
Comment 5 2020-12-15 20:26:13 PST
EWS
Comment 6 2020-12-15 21:00:12 PST
Committed r270878: <https://trac.webkit.org/changeset/270878> All reviewed patches have been landed. Closing bug and clearing flags on attachment 416314 [details].
Note You need to log in before you can comment on or make changes to this bug.