REGRESSION (r270839): ASSERT NOT REACHED in WebCore::Layout::InlineContentBreaker::processOverflowingContent https://bugs.webkit.org/show_bug.cgi?id=219904 <rdar://problem/72350087>

Reviewed by Simon Fraser.

"Typo" in r270839.

* layout/inlineformatting/InlineContentBreaker.cpp:
(WebCore::Layout::InlineContentBreaker::processOverflowingContent const):


Canonical link: https://commits.webkit.org/232514@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270878 268f45cc-cd09-0410-ab3c-d52691b4dbfc